# MiniEngine

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  build.bat
editor/: CMakeLists.txt  main.cpp
examples/default/: CMakeLists.txt  main.cpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: deferred.frag  deferred.vert  deferred_b.frag  env_convolution.frag  fragment.fs  fxaa.frag  lighting_vk.frag  lighting_vk.vert  pbr.frag  pbr.vert  precompbrdf.frag  prefilter.frag  prefilter.fs  shadow.vs  sky.frag  sky.vert  sky_render.frag  sky_render.vert  temp.frag  temp.vert  vertex.vs
src/: MiniEngine.cpp
src/backend/: DescriptorSet.cpp  DescriptorSet.h  IDriver.h  IImgui.h  IPlatform.h  OpenGLDriver.cpp  OpenGLDriver.h  OpenGLImgui.cpp  OpenGLImgui.h  OpenGLPlatform.cpp  OpenGLPlatform.h  Pipeline.cpp  Pipeline.h  Shader.cpp  Shader.h  ShaderData.h
src/backend/opengl/: OpenGLDriver.cpp  OpenGLDriver.h  OpenGLImgui.cpp  OpenGLImgui.h  OpenGLPlatform.cpp  OpenGLPlatform.h
src/backend/vulkan/: VulkanBarrier.cpp  VulkanBarrier.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDriver.cpp  VulkanDriver.h  VulkanHelper.h  VulkanImage.cpp  VulkanImage.h  VulkanMemory.cpp  VulkanMemory.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.h  VulkanPlatform.cpp  VulkanPlatform.h  VulkanRenderDoc.cpp  VulkanRenderDoc.h  VulkanRenderPass.h  VulkanSwapchain.cpp  VulkanSwapchain.h
src/components/: CameraComponent.h  Component.h  LightComponent.h  MaterialInstance.h  MeshComponent.h  RenderableComponent.h  SkyboxComponent.h  TransformComponent.h
src/core/: Buffer.h  Camera.cpp  Camera.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  GlobalBufferRegistry.cpp  GlobalBufferRegistry.h  Initializer.cpp  Initializer.h  JobSystem.cpp  JobSystem.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  RenderPass.cpp  RenderPass.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderRegistry.cpp  ShaderRegistry.h  ShadowMapper.cpp  ShadowMapper.h  ShadowSettings.cpp  ShadowSettings.h  Skybox.cpp  Skybox.h  Texture.cpp  (+6 more)
src/core/interfaces/: IDrawable.h  IMoveable.h
src/core/shadows/: DirectionalShadowPass.cpp  DirectionalShadowPass.h  IShadowPass.h  ShadowSettings.cpp  ShadowSettings.h
src/core/types/: EngineConstants.h  EngineTypes.h
src/core/utils/: Color.h  ComponentArray.h  Constants.cpp  Constants.h  DynamicArray.h  EnumExtension.h  FileHelper.h  Logger.h  Span.h  ThreadSafeQueue.h
tools/GlslCompiler/: CMakeLists.txt
tools/GlslCompiler/src/: GlslCompiler.cpp  GlslCompiler.h
tools/Loader/: CMakeLists.txt
tools/Loader/src/: Loader.cpp  Loader.h
tools/model-loader/: CMakeLists.txt
tools/model-loader/src/: model-loader.cpp  model-loader.h
